--- a/manifest.json
+++ b/manifest.json
@@ -25,8 +25,7 @@
         "repo": "kagg886/QQRedPackGetter",
         "branch": "master",
         "release": {
-            "tag": "1.0.0",
-            "file": "release.zip"
+            "tag": "1.0.0"
         }
     }
 }
