--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,10 @@
         {
             "name": "nkggya",
             "link": "https://github.com/nkggya"
+        },
+        {
+            "name": "QingXuer",
+            "link": "https://github.com/QingXuer"
         }
     ],
     "platform": [
